<resources>
    <string name="app_name">ViDkrypt</string>
    <string name="change_password">Change Password</string>
    <string name="profile">Profile</string>
    <string name="my_account">My Account</string>
    <string name="auto_key">Auto Key</string>
    <string name="delete_account">Delete Account</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="loading">Loading...</string>
    <string name="duration">00:00</string>
    <string name="colon">:</string>
    <string name="back_btn">Back Button</string>
    <string name="menu">Menu</string>
    <string name="video_name">Video Name</string>
    <string name="repeat_btn">Repeat Button</string>
    <string name="previous_button">Previous Button</string>
    <string name="next_button">Next Button</string>
    <string name="fullscreen_button">FullScreen Button</string>
    <string name="play_button">Play Button</string>


    <string name="welcome_greeting"> </string>
    <string name="heading_one"> </string>
    <string name="heading_two"> </string>
    <string name="heading_three"> </string>
    <string name="heading_fourth"> </string>
    <string name="heading_fifth"> </string>
    <string name="h1"> </string>
    <string name="h2"> </string>
    <string name="h3"> </string>
    <string name="h4"> </string>
    <string name="h5"> </string>

    //Description
    <string name="desc_one"> </string>
    <string name="desc_two"> </string>
    <string name="desc_three"> </string>
    <string name="desc_fourth"> </string>
    <string name="desc_fifth"> </string>
    <string name="d1"> </string>
</resources>