<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:title="@string/profile">
        <menu>

            <item
                android:id="@+id/myAccount"
                android:title="@string/my_account"
                android:icon="@drawable/ic_baseline_person_24"
                android:iconTint="@color/background"

                />
                <item
                    android:id="@+id/keygen"
                    android:title="@string/auto_key"
                    android:actionLayout="@layout/use_switch"
                    android:icon="@drawable/ic_baseline_vpn_key_24"
                    app:showAsAction="always"
                    />

            <item
                android:id="@+id/delAccount"
                android:title="@string/delete_account"
                android:icon="@drawable/ic_baseline_delete_24"
                android:iconTint="@color/background"
                />
            <item
                android:id="@+id/help"
                android:title="@string/help"
                android:icon="@drawable/ic_baseline_help_24"
                android:iconTint="@color/background"
                />
        </menu>

    </item>

   <item
       android:title=" ">
       <menu>
           <item
               android:id="@+id/logout"
               android:title="@string/logout"
               android:icon="@drawable/exit"
               android:iconTint="@color/background"/>
       </menu>

   </item>
</menu>