<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".player.VideoPlayerActivity">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/exoplayer_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        app:controller_layout_id="@layout/custom_control_view"

        />

    <LinearLayout
        android:id="@+id/topController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#42000000"
        >
      <ImageButton
          android:id="@+id/backBtn"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:src="@drawable/back_icon"
          android:backgroundTint="@android:color/transparent"
          android:contentDescription="@string/back_btn"
          app:tint="@color/white"
          />
        <TextView
            android:id="@+id/video_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/video_name"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:singleLine="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:ellipsize="marquee"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_menu_24"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/menu"
            app:tint="@color/white"
            android:layout_marginRight="50dp"
            />


    </LinearLayout>
    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_round_lock_open_24"
        android:layout_alignParentRight="true"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="Lock"
        app:tint="@color/white"
        />

    <ImageButton
        android:id="@+id/playPauseBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:background="?android:selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/play_button"
        android:focusable="true"
        android:src="@drawable/ic_baseline_play_arrow_24"
        app:tint="@color/white" />

    <LinearLayout
        android:id="@+id/BottomController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#42000000"
        android:layout_alignParentBottom="true"
        android:gravity="end|bottom"
        >
        <ImageButton
            android:id="@+id/repeatBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_repeat_24"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/repeat_btn"
            app:tint="@color/white"
            />

        <ImageButton
            android:id="@+id/prevBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_round_skip_previous_24"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/previous_button"
            app:tint="@color/white"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:focusable="true"
            />
        <ImageButton
            android:id="@+id/nextBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_round_skip_next_24"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/next_button"
            app:tint="@color/white"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            />
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_fullscreen_24"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/fullscreen_button"
            app:tint="@color/white"
            />


    </LinearLayout>

</RelativeLayout>